Rename SdkBindingDatas to SdkBindingDataFactory and change ofX methods
Signed-off-by: Pablo Casares Crespo <pabloc@spotify.com>