@@ -26,7 +26,7 @@ import java.util.List;
 import java.util.Map;
 import org.flyte.examples.AllInputsTask.AutoAllInputsOutput;
 import org.flyte.flytekit.SdkBindingData;
-import org.flyte.flytekit.SdkBindingDatas;
+import org.flyte.flytekit.SdkBindingDataFactory;
 import org.flyte.flytekit.SdkNode;
 import org.flyte.flytekit.SdkTypes;
 import org.flyte.flytekit.SdkWorkflow;
@@ -51,16 +51,16 @@ public class AllInputsWorkflow
             "all-inputs",
             new AllInputsTask(),
             AllInputsTask.AutoAllInputsInput.create(
-                SdkBindingDatas.ofInteger(1L),
-                SdkBindingDatas.ofFloat(2),
-                SdkBindingDatas.ofString("test"),
-                SdkBindingDatas.ofBoolean(true),
-                SdkBindingDatas.ofDatetime(someInstant),
-                SdkBindingDatas.ofDuration(Duration.ofDays(1L)),
-                SdkBindingDatas.ofStringCollection(Arrays.asList("foo", "bar")),
-                SdkBindingDatas.ofStringMap(Map.of("test", "test")),
-                SdkBindingDatas.ofStringCollection(Collections.emptyList()),
-                SdkBindingDatas.ofIntegerMap(Collections.emptyMap())));
+                SdkBindingDataFactory.of(1L),
+                SdkBindingDataFactory.of(2.00),
+                SdkBindingDataFactory.of("test"),
+                SdkBindingDataFactory.of(true),
+                SdkBindingDataFactory.of(someInstant),
+                SdkBindingDataFactory.of(Duration.ofDays(1L)),
+                SdkBindingDataFactory.ofStringCollection(Arrays.asList("foo", "bar")),
+                SdkBindingDataFactory.ofStringMap(Map.of("test", "test")),
+                SdkBindingDataFactory.ofStringCollection(Collections.emptyList()),
+                SdkBindingDataFactory.ofIntegerMap(Collections.emptyMap())));
 
     AllInputsTask.AutoAllInputsOutput outputs = apply.getOutputs();
 
